[tool.poetry]
name = "youtubelolcounter"
version = "0.1.0"
description = "Extract comments from YouTube Live archive and count LOL, LMAO, etc..."
authors = ["yuk1h1ra <iam.yuk1h1ra.me@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.25.1"
requests-html = "^0.10.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
